--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "license": "MIT",
   "version": "0.0.1",
   "scripts": {
-    "make": "npm run clean && npm run build",
-    "dev-demo": "npm run dev && zx ./scripts/build-demo-html.mjs && cd ./dist/output && serve .",
-    "dev": "npm run make && npm run run-action",
-    "clean": "rm -rf ./dist",
-    "build": "zx esbuild.config.mjs && zx scripts/after-build.mjs",
-    "run-action": "zx scripts/run-action.mjs",
-    "prepublishOnly": "npm run make && tsc --emitDeclarationOnly",
+    "clean": "node scripts/clean.mjs",
+    "build": "node scripts/build.mjs",
+    "dev": "node scripts/dev.mjs",
+    "watch": "npm run dev",
+    "build-online": "node scripts/build-online.mjs",
+    "build-offline": "node scripts/build-offline.mjs",
+    "build-library": "node scripts/build-library.mjs",
     "installType": "typesync"
   },
   "devDependencies": {
-    "@types/archiver": "5.3.1",
     "@types/eslint": "8.4.1",
     "@types/eslint-plugin-prettier": "3.1.0",
     "@types/fs-extra": "9.0.13",
     "@types/prettier": "2.6.0",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
-    "archiver": "5.3.1",
     "browserslist": "4.20.2",
+    "chokidar": "^3.5.3",
+    "clean-css": "^5.3.0",
     "esbuild": "0.14.38",
     "esbuild-plugin-browserslist": "0.4.9",
     "eslint": "8.14.0",
@@ -33,6 +33,7 @@
     "eslint-plugin-autofix": "1.1.0",
     "eslint-plugin-html": "6.2.0",
     "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "6.0.0",
@@ -44,18 +45,16 @@
     "eslint-plugin-unicorn": "42.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "fs-extra": "10.1.0",
-    "github-action-ts-run-api": "2.1.0",
     "prettier": "2.6.2",
+    "prettier-eslint": "^14.0.1",
     "serve": "13.0.2",
     "tiddlywiki": "5.2.2",
     "tslib": "2.4.0",
-    "tw5-plugin-packer": "0.0.10",
     "tw5-typed": "0.2.5",
     "typescript": "4.6.3",
     "typesync": "0.9.0",
-    "zx": "6.1.0"
-  },
-  "dependencies": {
-    "prettier-eslint": "^14.0.1"
+    "uglify-js": "^3.15.4",
+    "@types/html-minifier-terser": "^6.1.0",
+    "html-minifier-terser": "^7.0.0-alpha.2"
   }
 }
