--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "clean": "node scripts/clean.mjs",
     "build": "node scripts/build.mjs",
+    "make": "npm run build",
     "dev": "node scripts/dev.mjs",
     "watch": "npm run dev",
     "build-online": "node scripts/build-online.mjs",
@@ -16,6 +17,7 @@
     "@types/eslint": "8.4.1",
     "@types/eslint-plugin-prettier": "3.1.0",
     "@types/fs-extra": "9.0.13",
+    "@types/html-minifier-terser": "^6.1.0",
     "@types/prettier": "2.6.0",
     "@typescript-eslint/eslint-plugin": "5.20.0",
     "@typescript-eslint/parser": "5.20.0",
@@ -45,16 +47,15 @@
     "eslint-plugin-unicorn": "42.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "fs-extra": "10.1.0",
+    "html-minifier-terser": "^7.0.0-alpha.2",
     "prettier": "2.6.2",
     "prettier-eslint": "^14.0.1",
-    "serve": "13.0.2",
     "tiddlywiki": "5.2.2",
     "tslib": "2.4.0",
     "tw5-typed": "0.2.5",
     "typescript": "4.6.3",
     "typesync": "0.9.0",
     "uglify-js": "^3.15.4",
-    "@types/html-minifier-terser": "^6.1.0",
-    "html-minifier-terser": "^7.0.0-alpha.2"
+    "workbox-cli": "^6.5.3"
   }
 }
