--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "make": "npm run build",
     "dev": "node scripts/dev.mjs",
     "watch": "npm run dev",
-    "build-online": "node scripts/build-online.mjs",
+    "build-online": "node scripts/dump.mjs && node scripts/build-online.mjs",
     "build-offline": "node scripts/build-offline.mjs",
     "build-library": "node scripts/build-library.mjs",
     "installType": "typesync"
@@ -50,12 +50,14 @@
     "html-minifier-terser": "^7.0.0-alpha.2",
     "prettier": "2.6.2",
     "prettier-eslint": "^14.0.1",
-    "tiddlywiki": "5.2.2",
     "tslib": "2.4.0",
     "tw5-typed": "0.2.5",
     "typescript": "4.6.3",
     "typesync": "0.9.0",
     "uglify-js": "^3.15.4",
     "workbox-cli": "^6.5.3"
+  },
+  "dependencies": {
+    "tiddlywiki": "^5.2.2"
   }
 }
