--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-unicorn": "42.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "fs-extra": "10.1.0",
+    "get-port": "^6.1.2",
     "html-minifier-terser": "^7.0.0-alpha.2",
     "prettier": "2.6.2",
     "prettier-eslint": "^14.0.1",
@@ -55,7 +56,8 @@
     "typescript": "4.6.3",
     "typesync": "0.9.0",
     "uglify-js": "^3.15.4",
-    "workbox-cli": "^6.5.3"
+    "workbox-cli": "^6.5.3",
+    "ws": "^8.5.0"
   },
   "dependencies": {
     "tiddlywiki": "^5.2.2"
