--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "installType": "typesync"
   },
   "devDependencies": {
-    "@types/eslint": "8.4.1",
-    "@types/eslint-plugin-prettier": "3.1.0",
-    "@types/fs-extra": "9.0.13",
+    "@types/eslint": "^8.4.1",
+    "@types/eslint-plugin-prettier": "^3.1.0",
+    "@types/fs-extra": "^9.0.13",
     "@types/html-minifier-terser": "^6.1.0",
-    "@types/prettier": "2.6.0",
-    "@typescript-eslint/eslint-plugin": "5.20.0",
-    "@typescript-eslint/parser": "5.20.0",
-    "browserslist": "4.20.2",
+    "@types/prettier": "^2.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "browserslist": "4.20.3",
     "chokidar": "^3.5.3",
     "clean-css": "^5.3.0",
     "esbuild": "0.14.38",
@@ -29,13 +29,12 @@
     "eslint": "8.14.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-standard": "17.0.0",
-    "eslint-config-standard-with-typescript": "21.0.1",
     "eslint-import-resolver-alias": "1.1.2",
     "eslint-import-resolver-typescript": "2.7.1",
     "eslint-plugin-autofix": "1.1.0",
     "eslint-plugin-html": "6.2.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-n": "15.2.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "6.0.0",
@@ -50,11 +49,11 @@
     "get-port": "^6.1.2",
     "html-minifier-terser": "^7.0.0-alpha.2",
     "prettier": "2.6.2",
-    "prettier-eslint": "^14.0.1",
-    "tslib": "2.4.0",
-    "tw5-typed": "0.2.5",
-    "typescript": "4.6.3",
-    "typesync": "0.9.0",
+    "prettier-eslint": "14.0.2",
+    "tslib": "^2.4.0",
+    "tw5-typed": "^0.2.5",
+    "typescript": "^4.6.4",
+    "typesync": "^0.9.0",
     "uglify-js": "^3.15.4",
     "workbox-cli": "^6.5.3",
     "ws": "^8.5.0"
