--- a/package.json
+++ b/package.json
@@ -1,64 +1,64 @@
 {
-  "url": "https://github.com/tiddly-gittly/tw-example-plugin",
+  "url": "https://tiddly-gittly.github.io/Modern.TiddlyDev/",
   "license": "MIT",
   "version": "0.0.1",
   "scripts": {
-    "clean": "node scripts/clean.mjs",
-    "build": "node scripts/build.mjs",
-    "make": "npm run build",
-    "dev": "node scripts/dev.mjs",
-    "watch": "npm run dev",
-    "build-online": "node scripts/dump.mjs && node scripts/build-online.mjs",
-    "build-offline": "node scripts/build-offline.mjs",
-    "build-library": "node scripts/build-library.mjs",
-    "installType": "typesync"
+    "reset": "rimraf ./**/node_modules",
+    "clean": "rimraf dist",
+    "prepare": "husky install",
+    "dev": "ts-node scripts/index dev",
+    "build": "rimraf dist && ts-node scripts/index build",
+    "build:library": "rimraf dist && ts-node scripts/index build --library",
+    "publish": "rimraf dist && ts-node scripts/tw && ts-node scripts/index build --library",
+    "publish:offline": "rimraf dist && ts-node scripts/tw --offline && ts-node scripts/index build --library"
+  },
+  "engines": {
+    "node": ">=16"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "node --max_old_space_size=8192 ./node_modules/eslint/bin/eslint.js --fix --color --cache --quiet"
+    ],
+    "*.{js,jsx,mjs,mjsx,cjs,cjsx}": [
+      "node --max_old_space_size=8192 ./node_modules/eslint/bin/eslint.js --fix --color --cache --quiet"
+    ]
   },
   "devDependencies": {
-    "@types/eslint": "8.4.2",
-    "@types/eslint-plugin-prettier": "3.1.0",
-    "@types/fs-extra": "9.0.13",
-    "@types/html-minifier-terser": "6.1.0",
-    "@types/prettier": "2.6.0",
-    "@typescript-eslint/eslint-plugin": "5.22.0",
-    "@typescript-eslint/parser": "5.22.0",
-    "browserslist": "4.20.3",
-    "chokidar": "3.5.3",
-    "clean-css": "5.2.4",
-    "esbuild": "0.14.38",
-    "esbuild-plugin-browserslist": "0.4.9",
-    "eslint": "8.16.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-config-standard": "17.0.0",
-    "eslint-import-resolver-alias": "1.1.2",
-    "eslint-import-resolver-typescript": "2.7.1",
-    "eslint-plugin-autofix": "1.1.0",
-    "eslint-plugin-html": "6.2.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-n": "15.2.0",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-react": "7.29.4",
-    "eslint-plugin-react-hooks": "4.5.0",
-    "eslint-plugin-security": "1.5.0",
-    "eslint-plugin-security-node": "1.1.1",
-    "eslint-plugin-typescript-sort-keys": "2.1.0",
-    "eslint-plugin-unicorn": "42.0.0",
-    "eslint-plugin-unused-imports": "2.0.0",
-    "fs-extra": "10.1.0",
-    "get-port": "6.1.2",
-    "html-minifier-terser": "7.0.0-alpha.2",
-    "prettier": "2.6.2",
-    "prettier-eslint": "14.0.2",
-    "tslib": "2.4.0",
-    "tw5-typed": "0.2.7",
-    "typescript": "4.6.4",
-    "typesync": "0.9.1",
-    "uglify-js": "3.15.4",
-    "workbox-cli": "6.5.3",
-    "ws": "8.6.0"
+    "@modern-js/app-tools": "^1.21.5",
+    "@modern-js/tsconfig": "^1.21.5",
+    "@types/clean-css": "^4.2.6",
+    "@types/cli-progress": "^3.11.0",
+    "@types/html-minifier-terser": "^7.0.0",
+    "@types/lodash": "^4.14.190",
+    "@types/node": "^18.11.9",
+    "@types/uglify-js": "^3.17.1",
+    "@types/ws": "^8.5.3",
+    "browserslist": "^4.20.3",
+    "chokidar": "^3.5.3",
+    "clean-css": "^5.3.0",
+    "esbuild": "^0.14.38",
+    "esbuild-plugin-browserslist": "^0.4.9",
+    "fs-extra": "^10.1.0",
+    "html-minifier-terser": "^7.1.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.0.4",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^3.14.1",
+    "tslib": "^2.4.0",
+    "tw5-typed": "^0.2.7",
+    "typescript": "^4.6.4",
+    "uglify-js": "^3.15.4",
+    "ws": "^8.6.0"
   },
   "dependencies": {
-    "tiddlywiki": "5.2.2"
+    "ansi-colors": "^4.1.3",
+    "chalk": "^5.1.2",
+    "cli-progress": "^3.11.2",
+    "commander": "^9.4.1",
+    "get-port": "^6.1.2",
+    "get-port-please": "^2.6.1",
+    "lodash": "^4.17.21",
+    "tiddlywiki": "^5.2.3"
   }
 }
