--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "reset": "rimraf ./**/node_modules",
     "clean": "rimraf dist",
     "prepare": "husky install",
-    "dev": "ts-node scripts/index dev",
-    "build": "rimraf dist && ts-node scripts/index build",
-    "build:library": "rimraf dist && ts-node scripts/index build --library",
-    "publish": "rimraf dist && ts-node scripts/tw && ts-node scripts/index build --library",
-    "publish:offline": "rimraf dist && ts-node scripts/tw --offline && ts-node scripts/index build --library"
+    "dev": "tiddlywiki-plugin-dev dev",
+    "build": "rimraf dist && tiddlywiki-plugin-dev build",
+    "build:library": "rimraf dist && tiddlywiki-plugin-dev build --library --output dist/library",
+    "inject": "tiddlywiki-plugin-dev build --output wiki/tiddlers",
+    "publish": "npm run build:library && npm run inject && ts-node .scripts",
+    "publish:offline": "npm run build:library && npm run inject && ts-node .scripts --offline"
   },
   "engines": {
     "node": ">=16"
@@ -26,20 +27,7 @@
   "devDependencies": {
     "@modern-js/app-tools": "^1.21.5",
     "@modern-js/tsconfig": "^1.21.5",
-    "@types/clean-css": "^4.2.6",
-    "@types/cli-progress": "^3.11.0",
-    "@types/html-minifier-terser": "^7.0.0",
-    "@types/lodash": "^4.14.190",
     "@types/node": "^18.11.9",
-    "@types/uglify-js": "^3.17.1",
-    "@types/ws": "^8.5.3",
-    "browserslist": "^4.20.3",
-    "chokidar": "^3.5.3",
-    "clean-css": "^5.3.0",
-    "esbuild": "^0.14.38",
-    "esbuild-plugin-browserslist": "^0.4.9",
-    "fs-extra": "^10.1.0",
-    "html-minifier-terser": "^7.1.0",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.4",
     "rimraf": "^3.0.2",
@@ -47,18 +35,13 @@
     "tsconfig-paths": "^3.14.1",
     "tslib": "^2.4.0",
     "tw5-typed": "^0.2.7",
-    "typescript": "^4.6.4",
-    "uglify-js": "^3.15.4",
-    "ws": "^8.6.0"
+    "typescript": "^4.6.4"
   },
   "dependencies": {
     "ansi-colors": "^4.1.3",
-    "chalk": "^5.1.2",
     "cli-progress": "^3.11.2",
     "commander": "^9.4.1",
-    "get-port": "^6.1.2",
-    "get-port-please": "^2.6.1",
-    "lodash": "^4.17.21",
-    "tiddlywiki": "^5.2.3"
+    "tiddlywiki": "^5.2.3",
+    "tiddlywiki-plugin-dev": "^0.0.4"
   }
 }
