--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Clear
-        run: rm -rf .github/workflows/make-template.yml src/doc
+        run: rm -rf .github/workflows/make-template.yml src/doc && ls .github/workflows && ls src
 
       - name: Deploy
         uses: s0/git-publish-subdir-action@develop
