--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -21,4 +21,5 @@ jobs:
           REPO: self
           BRANCH: template
           FOLDER: .
+          SQUASH_HISTORY: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
