--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -16,8 +16,8 @@ jobs:
 
       - name: Clear
         run: |
-          git config --global user.email ${git config --get user.email}
-          git config --global user.name ${git config --get user.name}
+          git config --global user.email $(git config --get user.email)
+          git config --global user.name $(git config --get user.name)
           rm -rf .github/workflows/make-template.yml src/doc .git
           git init
           git add -A
