--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           fetch-depth: 0
 
+      - run: git config --get user.email && git config --get user.name
       - name: Clear
         run: |
           git config --get user.email
