--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -22,6 +22,7 @@ jobs:
           git init
           git add -A
           git commit -m "template"
+          git remote add origin https://github.com/$GITHUB_REPOSITORY.git
 
       - name: Deploy
         uses: ad-m/github-push-action@master
