--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -23,10 +23,4 @@ jobs:
           git add -A
           git commit -m "template"
           git remote add origin https://github.com/$GITHUB_REPOSITORY.git
-
-      - name: Deploy
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          force_with_lease: true
-          branch: template
+          git push --set-upstream origin template
