--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -13,12 +13,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Clear
-        run: rm -rf .github/workflows/make-template.yml src/doc
+        run: |
+          rm -rf .github/workflows/make-template.yml src/doc
+          mkdir tmpupload
+          cp -r !(tmpupload|.git) tmpupload/
 
       - name: Deploy
         uses: s0/git-publish-subdir-action@develop
         env:
           REPO: self
           BRANCH: template
-          FOLDER: .
+          FOLDER: tmpupload
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
