--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -16,9 +16,9 @@ jobs:
         run: |
           rm -rf .github/workflows/make-template.yml src/doc
           mkdir /tmp/moderntiddlydev
-          cp -r * /tmp/moderntiddlydev/
+          cp -r . /tmp/moderntiddlydev/
           mv /tmp/moderntiddlydev upload
-          rm -rf upload/.git
+          rm -rf upload/.git upload README.md
 
       - name: Deploy
         uses: s0/git-publish-subdir-action@develop
@@ -26,4 +26,5 @@ jobs:
           REPO: self
           BRANCH: template
           FOLDER: upload
+          SQUASH_HISTORY: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
