--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -15,9 +15,10 @@ jobs:
       - name: Clear
         run: |
           rm -rf .github/workflows/make-template.yml src/doc
-          mkdir /tmp/moderntiddlydev
           cp -r . /tmp/moderntiddlydev/
+          ls /tmp/moderntiddlydev/
           mv /tmp/moderntiddlydev upload
+          ls upload
           rm -rf upload/.git upload README.md
 
       - name: Deploy
