--- a/.github/workflows/make-template.yml
+++ b/.github/workflows/make-template.yml
@@ -27,4 +27,5 @@ jobs:
           REPO: self
           BRANCH: template
           FOLDER: upload
+          SQUASH_HISTORY: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
