--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "reset": "rimraf ./**/node_modules",
     "clean": "rimraf dist",
     "prepare": "husky install",
+    "update": "npm-check-updates -u",
     "new": "tiddlywiki-plugin-dev new",
     "dev": "tiddlywiki-plugin-dev dev",
     "build": "npm run clean && tiddlywiki-plugin-dev build",
@@ -30,18 +31,19 @@
     ]
   },
   "devDependencies": {
-    "@modern-js/eslint-config": "latest",
-    "@modern-js/tsconfig": "latest",
+    "@modern-js/eslint-config": "^2.0.2",
+    "@modern-js/tsconfig": "^2.0.2",
     "@types/node": "^18.11.18",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
-    "tw5-typed": "latest",
+    "tw5-typed": "^0.2.16",
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "npm-check-updates": "^16.6.2",
     "tiddlywiki": "^5.2.5",
-    "tiddlywiki-plugin-dev": "latest"
+    "tiddlywiki-plugin-dev": "^0.0.22"
   }
 }
