--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,9 @@
     "declaration": false,
     "jsx": "preserve",
     "baseUrl": "./",
-    "paths": {
-      "@/*": ["./src/*"]
-    },
     "types": ["node", "tw5-typed"],
     "lib": ["DOM", "ESNext"]
   },
-  "include": ["src", ".scripts"],
-  "exclude": ["*.js"]
+  "include": ["src"],
+  "exclude": ["./**/*.js"]
 }
