--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,9 @@ on:
   pull_request:
     branches:
       - master
+      - main
+    tags:
+      - 'v*.*.*'
     paths-ignore:
       - 'README.md'
       - 'wiki/**'
