--- a/package.json
+++ b/package.json
@@ -31,19 +31,20 @@
     ]
   },
   "devDependencies": {
-    "@modern-js/eslint-config": "^2.18.0",
-    "@modern-js/tsconfig": "^2.18.0",
-    "@types/node": "^20.1.2",
+    "@modern-js/eslint-config": "^2.23.1",
+    "@modern-js/tsconfig": "^2.23.1",
+    "@types/node": "^20.3.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
-    "rimraf": "^5.0.0",
+    "postcss": "^8.4.24",
+    "rimraf": "^5.0.1",
     "ts-node": "^10.9.1",
-    "tw5-typed": "^0.2.27",
-    "typescript": "^5.0.4"
+    "tw5-typed": "^0.3.4",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "npm-check-updates": "^16.10.12",
     "tiddlywiki": "^5.2.7",
-    "tiddlywiki-plugin-dev": "^0.0.36"
+    "tiddlywiki-plugin-dev": "^0.0.38"
   }
 }
