--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,6 @@ on:
     branches:
       - master
       - main
-    tags:
-      - 'v*.*.*'
     paths-ignore:
       - 'README.md'
       - 'wiki/**'
@@ -31,8 +29,11 @@ concurrency:
 
 jobs:
   Plugins:
+    permissions:
+        contents: write
+        pages: write
+        id-token: write
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -40,7 +41,7 @@ jobs:
       - name: Setup NodeJS
         uses: actions/setup-node@v2-beta
         with:
-          node-version: '16'
+          node-version: '18'
 
       - name: Cache dependencies
         uses: actions/cache@v3
