--- a/package.json
+++ b/package.json
@@ -31,9 +31,10 @@
     ]
   },
   "devDependencies": {
-    "@modern-js/eslint-config": "^2.23.1",
-    "@modern-js/tsconfig": "^2.23.1",
+    "@modern-js/tsconfig": "^2.24.0",
     "@types/node": "^20.3.1",
+    "dprint": "^0.37.1",
+    "eslint-config-tidgi": "1.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "postcss": "^8.4.24",
