--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "declaration": false,
     "jsx": "react-jsx",
     "baseUrl": "./",
-    "types": ["node", "tw5-typed"],
+    "typeRoots" : ["node_modules/@types", "node_modules/tw5-typed"],
     "lib": ["DOM", "ESNext"]
   },
   "include": ["src"],
