--- a/.gitignore
+++ b/.gitignore
@@ -133,6 +133,7 @@ output/
 wiki/tiddlers/$__language.tid
 wiki/tiddlers/$__StoryList.tid
 wiki/tiddlers/$__StoryList_*.tid
+wiki/tiddlers/$__palette.tid
 wiki/tiddlers/$__keepstate_*
 wiki/tiddlers/$__Import.tid
 wiki/tiddlers/$__UpgradeLibrary
