--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@modern-js/tsconfig": "^2.48.3",
+    "@types/jasmine": "^5.1.4",
     "@types/node": "^20.11.30",
     "dprint": "^0.45.0",
     "eslint-config-tidgi": "^1.2.2",
