--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -64,6 +64,9 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+      - name: Run tests
+        run: pnpm run test
+
       - name: Build Plugins
         run: pnpm run build
 
