feat: update cpl and ignore

--- a/.gitignore
+++ b/.gitignore
@@ -130,16 +130,16 @@ public-dist
 # for TiddlyWiki
 dist/
 output/
-wiki/tiddlers/$__language.tid
-wiki/tiddlers/$__StoryList.tid
-wiki/tiddlers/$__StoryList_*.tid
-wiki/tiddlers/$__palette.tid
-wiki/tiddlers/$__layout.tid
-wiki/tiddlers/$__keepstate_*
-wiki/tiddlers/$__Import.tid
-wiki/tiddlers/$__UpgradeLibrary
-wiki/tiddlers/$__UpgradeLibrary_List
-wiki/tiddlers/$__temp_*
-wiki/tiddlers/$__view.tid
-wiki/tiddlers/$__config_Navigation_openLinkFromInsideRiver.tid
-wiki/tiddlers/$__config_Navigation_openLinkFromOutsideRiver.tid
+wiki/**/$__language.tid
+wiki/**/$__StoryList.tid
+wiki/**/$__StoryList_*.tid
+wiki/**/$__palette.tid
+wiki/**/$__layout.tid
+wiki/**/$__keepstate_*
+wiki/**/$__Import.tid
+wiki/**/$__UpgradeLibrary
+wiki/**/$__UpgradeLibrary_List
+wiki/**/$__temp_*
+wiki/**/$__view.tid
+wiki/**/$__config_Navigation_openLinkFromInsideRiver.tid
+wiki/**/$__config_Navigation_openLinkFromOutsideRiver.tid
