--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "reset": "rimraf ./**/node_modules",
     "clean": "rimraf dist",
     "prepare": "husky install",
-    "update": "npm-check-updates -u",
+    "update": "npm-check-updates -u && dprint config update",
     "new": "tiddlywiki-plugin-dev new",
     "build:library": "npm run clean && tiddlywiki-plugin-dev build --library --output dist/library",
     "publish:offline": "npm run clean && tiddlywiki-plugin-dev publish --offline"
@@ -33,22 +33,22 @@
     ]
   },
   "devDependencies": {
-    "@modern-js/tsconfig": "^2.59.0",
+    "@modern-js/tsconfig": "^2.60.5",
     "@types/jasmine": "^5.1.4",
-    "@types/node": "^22.5.4",
-    "dprint": "^0.47.2",
+    "@types/node": "^22.7.9",
+    "dprint": "^0.47.4",
     "eslint-config-tidgi": "^1.2.3",
-    "husky": "^9.1.5",
+    "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
-    "postcss": "^8.4.45",
+    "postcss": "^8.4.47",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
-    "tw5-typed": "^0.5.12",
-    "typescript": "^5.5.4"
+    "tw5-typed": "^0.5.14",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "npm-check-updates": "^17.1.1",
+    "npm-check-updates": "^17.1.4",
     "tiddlywiki": "^5.3.5",
-    "tiddlywiki-plugin-dev": "^0.2.1"
+    "tiddlywiki-plugin-dev": "^0.3.1"
   }
 }
