chore: eslint upgrade to v9

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 strict-peer-dependencies=false
-public-hoist-pattern[]=*@nextui-org/*
+# This is a workaround for VSCode's Eslint extension not loading plugins correctly,
+# see: https://github.com/pnpm/pnpm/issues/5447
 public-hoist-pattern[]=*eslint*
