--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,9 @@
     "declaration": false,
     "jsx": "react-jsx",
     "baseUrl": "./",
-    "typeRoots" : ["node_modules/@types", "node_modules/tw5-typed"],
+    "noEmit": true,
+    "typeRoots": ["node_modules/@types", "node_modules/tw5-typed"],
     "lib": ["DOM", "ESNext"]
   },
-  "include": ["src"]
+  "include": ["src", "*.json", "wiki/*.info", "*.mjs", "*.js"]
 }
