--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "typeRoots": ["node_modules/@types", "node_modules/tw5-typed"],
     "lib": ["DOM", "ESNext"]
   },
-  "include": ["src", "*.json", "wiki/*.info", "*.mjs", "*.js"]
+  "include": ["src", "*.json", "wiki/*.info", "*.mjs", "*.js", "src/**/*.d.ts"]
 }
